Update footer to have z-index to resolve issue with monaco code preview displaying above footer

--- a/assets/css/kyte-shipyard-styles.css
+++ b/assets/css/kyte-shipyard-styles.css
@@ -4,7 +4,13 @@ html, body { margin: 0; padding: 0; font-family: 'Nunito', sans-serif !important
 small.copyright {font-weight: 200;}
 #login-form, #reset-form, #enrollment-form, #password-update-form { width: 100%; margin: 0 auto; padding-bottom: 4em;}
 #login-form .col, #reset-form .col, #enrollment-form .col, #password-update-form .col { padding: 1em;}
-footer { position:fixed; bottom:0; width:100%; background-color: #333333; }
+footer {
+    position:fixed;
+    bottom:0;
+    width:100%;
+    background-color: #333333;
+    z-index: 100;
+}
 footer p { margin-bottom: 0; }
 .footer-spacer  { clear: both; height: 120px; }
 .text-right { text-align: right !important; }
